<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/activity_margin"
        tools:context=".EditorActivity">

        <!-- Name field -->
        <EditText
            android:id="@+id/edit_product_name"
            style="@style/EditorFieldStyle"
            android:hint="@string/hint_product_name"
            android:inputType="textCapWords" />

        <!-- Price field -->
        <EditText
            android:id="@+id/edit_product_price"
            style="@style/EditorFieldStyle"
            android:hint="@string/hint_product_price"
            android:inputType="numberDecimal" />

        <!-- Qunatity field -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edit_product_quantity"
                style="@style/EditorFieldQuantityStyle"
                android:hint="@string/quantity_default"
                android:inputType="number"
                android:paddingEnd="@dimen/plus_minus_horizontal"
                android:paddingRight="@dimen/plus_minus_horizontal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/plus_minus_horizontal"
                android:layout_marginStart="@dimen/plus_minus_horizontal"
                android:gravity="right"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_minus"
                    android:layout_width="@dimen/plus_minus_icon_size"
                    android:layout_height="@dimen/plus_minus_icon_size"
                    android:layout_marginEnd="@dimen/plus_minus_horizontal"
                    android:layout_marginRight="@dimen/plus_minus_horizontal"
                    android:src="@drawable/minus_selector" />

                <ImageView
                    android:id="@+id/iv_plus"
                    android:layout_width="@dimen/plus_minus_icon_size"
                    android:layout_height="@dimen/plus_minus_icon_size"
                    android:layout_marginLeft="@dimen/plus_minus_horizontal"
                    android:layout_marginStart="@dimen/plus_minus_horizontal"
                    android:src="@drawable/plus_selector" />
            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:id="@+id/iv_product_image"
            android:layout_width="@dimen/camera_w"
            android:layout_height="@dimen/camera_h"
            android:scaleType="centerCrop"
            android:src="@drawable/camera" />

        <Button
            android:id="@+id/bt_order"
            style="?android:textAppearanceSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="@drawable/btn_order_selector"
            android:gravity="center"
            android:paddingEnd="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingStart="5dp"
            android:text="@string/order_more"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>
</ScrollView>